<resources>
    <string name="app_name">MovieApps</string>
    <string name="logo">logo</string>
    <string name="find_movie">Movies Apps</string>
    <string name="movies">Movies</string>
    <string name="popular_movie">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="tv_show">TV Shows</string>
    <string name="popular_people">Popular People</string>
    <string name="search_movie">Search Movie...</string>
    <string name="copyright">TMT Batch 3 - Android Session</string>
    <string name="list">View As List</string>
    <string name="grid">View As Grid</string>
    <string name="staggered">View As Staggered</string>
    <string name="username">Username / Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="my_favorite">My Favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
</resources>