<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_movie"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:id="@+id/menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_imovie_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_projector_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/icons8_movie_theater_64"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/now_playing"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_ticket_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movie"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_show"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >

                <LinearLayout
                    android:id="@+id/menu5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_imovie_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_projector_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/icons8_movie_theater_64"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/now_playing"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_ticket_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movie"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_people"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:id="@+id/menu9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_menu"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/icons8_charlie_chaplin_64"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:visibility="invisible">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_ticket_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movie"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:visibility="invisible">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_ticket_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movie"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_movie_ticket_50"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movie"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TMT Batch 3 - Android Session"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>